# Matrix

./: CMakeLists.txt  Makefile  Readme.txt  circuit.cpp  circuit.h  generator.cpp  generator.h  main.cpp  matrix.cpp  matrix.h  tests.cpp  tests.h  unit_tests.cpp
circuit/: circuit.h  input_output_circuit.cpp  input_output_circuit.h
circuit/circuit_test_ans/: 3.ans
circuit_test_ans/: 1.ans  10.ans  2.ans  4.ans  5.ans  6.ans  7.ans  8.ans  9.ans
dynamic_array/: Readme.txt  dynamic_array.h
input_output/: input_output.cpp  input_output.h
matrix/: CMakeLists.txt  Readme.txt  generator.cpp  matrix.cpp  matrix.h  matrix_chain_generator.h  matrix_chain_test.cpp  matrix_chain_test.h  matrix_mult_chain.h  matrix_mult_chain.h.autosave  matrix_test.cpp  matrix_test.h  mem_storage.h
mem_storage/: mem_storage.h
tests/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
